Refactor retrieving of attachments to use StreamDetails